-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 11.0.0-beta1
-
None
-
-
6383146b0 (master)
The call stack:
Thread 1 (Thread 0x7fd00cd65cc0 (LWP 46776)): #0 0x00007fcf9cd1b1d6 in QHash<QString, Autotest::Internal::ItemDataCache<Qt::CheckState>::Entry>::isEmpty (this=0x0) at /home/jarek/dev/qt-64/qtbase/src/corelib/tools/qhash.h:920 #1 0x00007fcf9cd1890c in QHash<QString, Autotest::Internal::ItemDataCache<Qt::CheckState>::Entry>::find (this=0x0, key=...) at /home/jarek/dev/qt-64/qtbase/src/corelib/tools/qhash.h:1254 #2 0x00007fcf9cd1682c in Autotest::Internal::ItemDataCache<Qt::CheckState>::get (this=0x0, item=0x557e6c0a0f10) at /home/jarek/dev/creator-master/src/plugins/autotest/itemdatacache.h:40 #3 0x00007fcf9cd0d14d in Autotest::TestTreeModel::insertItemInParent (this=0x557e69e77358, item=0x557e6c0a0f10, root=0x557e69efd1d0, groupingEnabled=false) at /home/jarek/dev/creator-master/src/plugins/autotest/testtreemodel.cpp:582 #4 0x00007fcf9cd0bec7 in Autotest::TestTreeModel::filterAndInsert (this=0x557e69e77358, item=0x557e6c0a0f10, root=0x557e69efd1d0, groupingEnabled=false) at /home/jarek/dev/creator-master/src/plugins/autotest/testtreemodel.cpp:399 #5 0x00007fcf9cd0de8f in Autotest::TestTreeModel::handleParseResult (this=0x557e69e77358, result=0x7fcda4118750, parentNode=0x557e69efd1d0) at /home/jarek/dev/creator-master/src/plugins/autotest/testtreemodel.cpp:715 #6 0x00007fcf9cd0d85c in Autotest::TestTreeModel::onParseResultReady (this=0x557e69e77358, result=...) at /home/jarek/dev/creator-master/src/plugins/autotest/testtreemodel.cpp:655 #7 0x00007fcf9cd1e9e6 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<QSharedPointer<Autotest::TestParseResult> >, void, void (Autotest::TestTreeModel::*)(QSharedPointer<Autotest::TestParseResult>)>::call (f=(void (Autotest::TestTreeModel::*)(Autotest::TestTreeModel * const, QSharedPointer<Autotest::TestParseResult>)) 0x7fcf9cd0d7c0 <Autotest::TestTreeModel::onParseResultReady(QSharedPointer<Autotest::TestParseResult>)>, o=0x557e69e77358, arg=0x557e6e2aa6e8) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobjectdefs_impl.h:135 #8 0x00007fcf9cd1c7dd in QtPrivate::FunctionPointer<void (Autotest::TestTreeModel::*)(QSharedPointer<Autotest::TestParseResult>)>::call<QtPrivate::List<QSharedPointer<Autotest::TestParseResult> >, void> (f=(void (Autotest::TestTreeModel::*)(Autotest::TestTreeModel * const, QSharedPointer<Autotest::TestParseResult>)) 0x7fcf9cd0d7c0 <Autotest::TestTreeModel::onParseResultReady(QSharedPointer<Autotest::TestParseResult>)>, o=0x557e69e77358, arg=0x557e6e2aa6e8) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobjectdefs_impl.h:172 #9 0x00007fcf9cd1a2a9 in QtPrivate::QSlotObject<void (Autotest::TestTreeModel::*)(QSharedPointer<Autotest::TestParseResult>), QtPrivate::List<QSharedPointer<Autotest::TestParseResult> >, void>::impl (which=1, this_=0x557e69efd150, r=0x557e69e77358, a=0x557e6e2aa6e8, ret=0x0) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobjectdefs_impl.h:383 #10 0x00007fd0109bb8c3 in QtPrivate::QSlotObjectBase::call (this=0x557e69efd150, r=0x557e69e77358, a=0x557e6e2aa6e8) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobjectdefs_impl.h:363 #11 0x00007fd010a23c8d in QMetaCallEvent::placeMetaCall (this=0x557e6e2aa6a0, object=0x557e69e77358) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobject.cpp:608 #12 0x00007fd010a24f05 in QObject::event (this=0x557e69e77358, e=0x557e6e2aa6a0) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobject.cpp:1378 #13 0x00007fd012462f74 in QApplicationPrivate::notify_helper (this=0x557e692e9b80, receiver=0x557e69e77358, e=0x557e6e2aa6a0) at /home/jarek/dev/qt-64/qtbase/src/widgets/kernel/qapplication.cpp:3315 #14 0x00007fd012462d66 in QApplication::notify (this=0x7ffc3d2ea770, receiver=0x557e69e77358, e=0x557e6e2aa6a0) at /home/jarek/dev/qt-64/qtbase/src/widgets/kernel/qapplication.cpp:3266 #15 0x00007fd01099a3e5 in QCoreApplication::notifyInternal2 (receiver=0x557e69e77358, event=0x557e6e2aa6a0) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qcoreapplication.cpp:1026 #16 0x00007fd01099af83 in QCoreApplication::sendEvent (receiver=0x557e69e77358, event=0x557e6e2aa6a0) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qcoreapplication.cpp:1442 #17 0x00007fd01099beda in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x557e692f7b10) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qcoreapplication.cpp:1804 #18 0x00007fd01099b7a8 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qcoreapplication.cpp:1663 #19 0x00007fd010dd5ec0 in postEventSourceDispatch (s=0x557e69370f20) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:243 #20 0x00007fd00f2f7d3b in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 #21 0x00007fd00f34c6c8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 #22 0x00007fd00f2f53e3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 #23 0x00007fd010dd6782 in QEventDispatcherGlib::processEvents (this=0x557e69370490, flags=...) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:393 #24 0x00007fd00c6a964c in QXcbGlibEventDispatcher::processEvents (this=0x557e69370490, flags=...) at /home/jarek/dev/qt-64/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:96 #25 0x00007fd0109ae745 in QEventLoop::processEvents (this=0x557e6a934ca0, flags=...) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qeventloop.cpp:100 #26 0x00007fd0109aeab4 in QEventLoop::exec (this=0x557e6a934ca0, flags=...) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qeventloop.cpp:182 #27 0x00007fd013663cad in ExtensionSystem::Internal::PluginManagerPrivate::shutdown (this=0x557e695ae540) at /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1378 #28 0x00007fd01365d0f1 in ExtensionSystem::PluginManager::shutdown () at /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:390 #29 0x0000557e6927f0a4 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (*)()>::call(void (*&)(), void**) (f=@0x7ffc3d2ea148: 0x7fd01365d0da <ExtensionSystem::PluginManager::shutdown()>, arg=0x7ffc3d2ea330) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobjectdefs_impl.h:127 #30 0x0000557e6927d711 in QtPrivate::FunctionPointer<void (*)()>::call<QtPrivate::List<>, void>(void (*)(), void*, void**) (f=0x7fd01365d0da <ExtensionSystem::PluginManager::shutdown()>, arg=0x7ffc3d2ea330) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobjectdefs_impl.h:196 #31 0x0000557e6927bc46 in QtPrivate::QStaticSlotObject<void (*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x557e6b406b40, r=0x7ffc3d2ea4d0, a=0x7ffc3d2ea330, ret=0x0) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobject_impl.h:54 #32 0x00007fd0109bb8c3 in QtPrivate::QSlotObjectBase::call (this=0x557e6b406b40, r=0x7ffc3d2ea4d0, a=0x7ffc3d2ea330) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobjectdefs_impl.h:363 #33 0x00007fd010a36a9c in doActivate<false> (sender=0x7ffc3d2ea770, signal_index=3, argv=0x7ffc3d2ea330) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobject.cpp:3979 #34 0x00007fd010a2ce73 in QMetaObject::activate (sender=0x7ffc3d2ea770, m=0x7fd01114ad00 <QCoreApplication::staticMetaObject>, local_signal_index=0, argv=0x7ffc3d2ea330) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qobject.cpp:4039 #35 0x00007fd01099f6c4 in QCoreApplication::aboutToQuit (this=0x7ffc3d2ea770, _t1=...) at /home/jarek/dev/qt-64-build/qtbase/src/corelib/Core_autogen/include/moc_qcoreapplication.cpp:296 #36 0x00007fd01099ae2a in QCoreApplicationPrivate::execCleanup (this=0x557e692e9b80) at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qcoreapplication.cpp:1367 #37 0x00007fd01099ad87 in QCoreApplication::exec () at /home/jarek/dev/qt-64/qtbase/src/corelib/kernel/qcoreapplication.cpp:1351 #38 0x00007fd0115e2cea in QGuiApplication::exec () at /home/jarek/dev/qt-64/qtbase/src/gui/kernel/qguiapplication.cpp:1859 #39 0x00007fd01245ff7d in QApplication::exec () at /home/jarek/dev/qt-64/qtbase/src/widgets/kernel/qapplication.cpp:2595 #40 0x0000557e6926f9d0 in main (argc=1, argv=0x7ffc3d2eaa68) at /home/jarek/dev/creator-master/src/app/main.cpp:794