AutoTest: Avoid crash

Do not queue signals of parse results. In case of a shutdown
these signals could be received too late and the item cache
of the treemodel might have been destroyed already.

Fixes: QTCREATORBUG-28797
Change-Id: I6daa2b2464dbfb123af3b1e708794b2dbf897bff
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>